manifests-failed/kubegems-local-1.24.5.tgz-manifest.yaml
---
# Source: kubegems-local/templates/agent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-kubegems-local-agent
  namespace: "kubegems-local-1.24.5.tgz"
  labels:
    app.kubernetes.io/name: kubegems-local
    helm.sh/chart: kubegems-local-1.24.5
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: agent
  annotations:
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8041
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: kubegems-local
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: agent
---
# Source: kubegems-local/templates/controller/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-kubegems-local-controller-webhook
  namespace: "kubegems-local-1.24.5.tgz"
  labels:
    app.kubernetes.io/name: kubegems-local
    helm.sh/chart: kubegems-local-1.24.5
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
spec:
  type: ClusterIP
  
  
  ports:
    - name: webhook
      port: 443
      targetPort: webhook
      protocol: TCP
  selector:
    app.kubernetes.io/name: kubegems-local
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: controller
---
# Source: kubegems-local/templates/agent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-kubegems-local-agent
  namespace: "kubegems-local-1.24.5.tgz"
  labels:
    app.kubernetes.io/name: kubegems-local
    helm.sh/chart: kubegems-local-1.24.5
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: agent
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: kubegems-local
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubegems-local
        helm.sh/chart: kubegems-local-1.24.5
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: agent
    spec:
      serviceAccountName: my-release-kubegems-local-agent
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: kubegems-local
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: agent
                namespaces:
                  - "kubegems-local-1.24.5.tgz"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      containers:
        - name: agent
          image: docker.io/kubegems/kubegems:v1.24.5
          imagePullPolicy: IfNotPresent
          args:
            - agent
            - --system-listen=:8080
            - --kubectl-podselector=app.kubernetes.io/component=kubectl,app.kubernetes.io/name=my-release-kubegems-local
            - --system-cafile=/certs/ca.crt
            - --system-certfile=/certs/tls.crt
            - --system-keyfile=/certs/tls.key
            - --api-enablehttpsigs
            - --otel-enable
            - --api-prometheusserver=
            - --api-alertmanagerserver=
            - --api-lokiserver=
            - --api-jaegerserver=
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 10
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /healthz
              port: http
              scheme: HTTPS
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /healthz
              port: http
              scheme: HTTPS
          volumeMounts:
            - name: certs
              mountPath: /certs
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: my-release-kubegems-local-agent
            defaultMode: 420
---
# Source: kubegems-local/templates/controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-kubegems-local-controller
  namespace: "kubegems-local-1.24.5.tgz"
  labels:
    app.kubernetes.io/name: kubegems-local
    helm.sh/chart: kubegems-local-1.24.5
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: kubegems-local
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubegems-local
        helm.sh/chart: kubegems-local-1.24.5
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: controller
    spec:
      serviceAccountName: my-release-kubegems-local-controller
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: kubegems-local
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: controller
                namespaces:
                  - "kubegems-local-1.24.5.tgz"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: controller
          image: docker.io/kubegems/kubegems:v1.24.5
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          args:
            - controller
            - --enableleaderelection
            - --enablewebhook
            - --webhookaddr=:9443
            - --probeaddr=:8080
          resources:
            limits: {}
            requests: {}
          ports:
            - name: probe
              containerPort: 8080
              protocol: TCP
            - name: webhook
              containerPort: 9443
              protocol: TCP
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 10
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /healthz
              port: probe
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 10
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
            httpGet:
              path: /healthz
              port: probe
          volumeMounts:
            - name: certs
              mountPath: /tmp/k8s-webhook-server/serving-certs
              readOnly: true
      volumes:
        - name: certs
          secret:
            secretName: my-release-kubegems-local-controller-webhook
            defaultMode: 420
---
# Source: kubegems-local/templates/kubectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-kubegems-local-kubectl
  namespace: "kubegems-local-1.24.5.tgz"
  labels:
    app.kubernetes.io/name: kubegems-local
    helm.sh/chart: kubegems-local-1.24.5
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: kubectl
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: kubegems-local
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: kubectl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubegems-local
        helm.sh/chart: kubegems-local-1.24.5
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: kubectl
    spec:
      serviceAccountName: my-release-kubegems-local-agent
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: kubegems-local
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: kubectl
                namespaces:
                  - "kubegems-local-1.24.5.tgz"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      containers:
        - name: kubectl
          image: docker.io/kubegems/kubectl:latest
          imagePullPolicy: Always
          args:
          resources:
            limits: {}
            requests: {}
---
# Source: kubegems-local/templates/controller/webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-kubegems-local-controller-webhook
  labels:
    app.kubernetes.io/name: kubegems-local
    helm.sh/chart: kubegems-local-1.24.5
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  annotations:
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /mutate
    failurePolicy: Fail
    name: mutate.resourcequota.dev
    rules:
    - apiGroups:
      - gems.kubegems.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - tenantresourcequotas
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /mutate
    failurePolicy: Fail
    name: mutate.environment.dev
    rules:
    - apiGroups:
      - gems.kubegems.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - environments
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /mutate
    failurePolicy: Fail
    name: mutate.gateway.dev
    rules:
    - apiGroups:
      - gems.kubegems.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - tenantgateways
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /mutate
    failurePolicy: Fail
    name: mutate.ingress.dev
    rules:
    - apiGroups:
      - networking.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ingresses
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /label-injector
    failurePolicy: Ignore
    name: mutate.label-injector.dev
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - '*'
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
      - configmaps
      - secrets
      - services
      - daemonsets
      - deployments
      - statefulsets
      - jobs
      - cronjobs
      - persistentvolumeclaims
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /label-injector
    failurePolicy: Ignore
    name: mutate.label-injector-logging.dev
    rules:
    - apiGroups:
      - logging.banzaicloud.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      resources:
      - flows
      - outputs
    sideEffects: None
---
# Source: kubegems-local/templates/controller/webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: my-release-kubegems-local-controller-webhook
  labels:
    app.kubernetes.io/name: kubegems-local
    helm.sh/chart: kubegems-local-1.24.5
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  annotations:
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /validate
    failurePolicy: Fail
    name: validate.tenant.dev
    rules:
    - apiGroups:
        - gems.kubegems.io
      apiVersions:
        - v1beta1
      operations:
        - UPDATE
      resources:
        - tenants
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /validate
    failurePolicy: Fail
    name: validate.tenantresourcequota.dev
    rules:
    - apiGroups:
        - gems.kubegems.io
      apiVersions:
        - v1beta1
      operations:
        - CREATE
        - UPDATE
        - DELETE
      resources:
        - tenantresourcequotas
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /validate
    failurePolicy: Fail
    name: validate.tenantnetworkpolicy.dev
    rules:
    - apiGroups:
      - gems.kubegems.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      resources:
      - tenantnetworkpolicies
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /validate
    failurePolicy: Fail
    name: validate.tenantgateway.dev
    rules:
    - apiGroups:
      - gems.kubegems.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      - DELETE
      resources:
      - tenantgateways
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /validate
    failurePolicy: Fail
    name: validate.environment.dev
    rules:
    - apiGroups:
      - gems.kubegems.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - environments
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /validate
    failurePolicy: Fail
    name: valiate.namespace.dev
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - '*'
      operations:
      - DELETE
      resources:
      - namespaces
    sideEffects: None
  - admissionReviewVersions:
    - v1
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lRSVRYL1J4M09tTkpnM3B5TzdLMS9XVEFOQmdrcWhraUc5dzBCQVFzRkFEQVcKTVJRd0VnWURWUVFERXd0cmRXSmxaMlZ0Y3kxallUQWVGdzB5TkRBMk1qQXhORFUzTXpaYUZ3MHpOREEyTVRneApORFUzTXpaYU1CWXhGREFTQmdOVkJBTVRDMnQxWW1WblpXMXpMV05oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBeTJFL1ZEL1NrZXE3bElTU2VVb3Z6V290V2NqRHZIY28ybDQ3VlFTb2lReGMKVjRnMm9VTDFnNkRIUllPK3B1dWRwdmtlVlEzMlpMbWt5ZTBtWlRqYWtjdE1nclI3K3MxTEJiYjRHU1NWenA3ZQp6YytRVjRTaTJ [...]
      service:
        name: my-release-kubegems-local-controller-webhook
        namespace: "kubegems-local-1.24.5.tgz"
        path: /validate
    failurePolicy: Fail
    name: validate.istiogateway.dev
    rules:
    - apiGroups:
      - networking.istio.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      - UPDATE
      resources:
      - gateways
    sideEffects: None
